Espece de bouffons

--- a/Code/src/main/resources/fsiAdministration/views/page_connexion.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/page_connexion.fxml
@@ -3,6 +3,7 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
@@ -71,11 +72,11 @@
                         <Insets left="80.0" top="10.0" />
                      </HBox.margin>
                   </Label>
-                  <TextField fx:id="tfMDP" prefHeight="31.0" prefWidth="262.0">
+                  <PasswordField fx:id="tfMDP" prefHeight="25.3" prefWidth="262.0">
                      <HBox.margin>
                         <Insets bottom="10.0" left="5.0" top="5.0" />
                      </HBox.margin>
-                  </TextField>
+                  </PasswordField>
                </children>
             </HBox>
             <Separator prefWidth="200.0" style="-fx-background-color: #024010;" />
