--- a/Code/src/main/resources/fsiAdministration/views/ErreurConnexion.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/ErreurConnexion.fxml
@@ -2,21 +2,27 @@
 
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<VBox maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="68.0" prefWidth="571.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ErrorController">
-   <children>
-      <Text strokeType="OUTSIDE" strokeWidth="0.0" text="Erreur mot de passe ou indentifant incorrect" textAlignment="CENTER" wrappingWidth="571.44140625">
+<StackPane prefHeight="157.0" prefWidth="560.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ErrorController">
+
+   <!-- Contenu principal -->
+   <VBox alignment="CENTER" prefWidth="419.0" spacing="30.0">
+      <padding>
+         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      </padding>
+
+      <!-- Message d'erreur -->
+      <Text fill="#0c7422" text="Erreur : identifiant ou mot de passe incorrect" textAlignment="CENTER" wrappingWidth="480.0">
          <font>
-            <Font size="19.0" />
+            <Font name="Franklin Gothic Medium" size="22.0" />
          </font>
       </Text>
-      <Button fx:id="ButtonOk" alignment="CENTER" mnemonicParsing="false" onAction="#ButtonOkOnAction" text="OK" textAlignment="CENTER">
-         <VBox.margin>
-            <Insets left="278.0" top="10.0" />
-         </VBox.margin>
-      </Button>
-   </children>
-</VBox>
+
+      <!-- Bouton OK -->
+      <Button fx:id="ButtonOk" onAction="#ButtonOkOnAction" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #0c7422;" text="OK" textFill="WHITE" />
+   </VBox>
+</StackPane>
