--- a/Code/src/main/resources/fsiAdministration/views/page_ajout_section.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/page_ajout_section.fxml
@@ -1,103 +1,129 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextArea?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
-<?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.QuadCurve?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="729.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.AjouterSectionController">
+<Pane prefHeight="478.0" prefWidth="729.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.AjouterSectionController">
+
    <children>
-      <VBox layoutX="-1.0" layoutY="54.0" prefHeight="291.0" prefWidth="729.0">
+
+      <!-- Barre de menu -->
+      <MenuBar layoutY="1.0" prefHeight="26.0" prefWidth="729.0">
+         <menus>
+            <Menu fx:id="gestionEtud" text="Gestion étudiant">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/graduation-cap.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <items>
+                  <MenuItem fx:id="bListeEtud" onAction="#bListEtudClick" text="Liste étudiant" />
+                  <MenuItem fx:id="bAjouterEtud" onAction="#bAjouterEtudClick" text="Ajouter un étudiant" />
+               </items>
+            </Menu>
+            <Menu fx:id="gestionSection" text="Gestion section">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/users-alt.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <items>
+                  <MenuItem fx:id="bListeSection" onAction="#bListeSectionClick" text="Liste des sections" />
+                  <MenuItem fx:id="bAjouterSection" onAction="#bAjouterSectionClick" text="Ajouter une section" />
+               </items>
+            </Menu>
+            <Menu fx:id="gestionCours" text="Gestion cours">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/book-alt.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <items>
+                  <MenuItem fx:id="bListeCours" onAction="#bListeCoursClick" text="Liste cours" />
+                  <MenuItem fx:id="bAjouterCours" onAction="#bAjouterCoursClick" text="Ajouter un cours" />
+               </items>
+            </Menu>
+            <Menu fx:id="bAutres" text="Autres">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/info.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+               <items>
+                  <MenuItem fx:id="bAccueil" onAction="#bAccueilClick" text="Accueil" />
+                  <MenuItem fx:id="bQuitter" onAction="#bQuitterClick" text="Quitter" />
+               </items>
+            </Menu>
+         </menus>
+      </MenuBar>
+
+      <!-- Titre avec fond vert -->
+      <Label alignment="CENTER" contentDisplay="CENTER" layoutY="45.0" prefHeight="35.0" prefWidth="727.0" text="AJOUT D'UNE NOUVELLE SECTION" textAlignment="CENTER" textFill="#024010">
+         <font>
+            <Font name="System Bold" size="24.0" />
+         </font>
+      </Label>
+
+      <!-- Barre verte horizontale -->
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#01a321" height="5.0" layoutX="101.0" layoutY="77.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="508.0" />
+
+      <!-- Libellé Section -->
+      <HBox fx:id="hbLibelleSection" alignment="CENTER_LEFT" layoutY="120.0" prefHeight="100.0" prefWidth="727.0" spacing="10.0">
          <children>
-            <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="730.0" text="AJOUT D'UNE NOUVELLE SECTION" textAlignment="CENTER" textFill="#024010">
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="165.0" text="Libellé Section" textFill="#024010">
                <font>
-                  <Font name="System Bold" size="24.0" />
-               </font>
-            </Label>
-            <HBox fx:id="hbNomEtud" prefHeight="98.0" prefWidth="729.0">
-               <children>
-                  <Label prefHeight="20.0" prefWidth="116.0" text="Libelle Section" textFill="#024010">
-                     <font>
-                        <Font name="System Bold" size="14.0" />
-                     </font>
-                     <HBox.margin>
-                        <Insets />
-                     </HBox.margin>
-                  </Label>
-                  <TextArea fx:id="taLibSec" prefHeight="98.0" prefWidth="620.0" />
-               </children>
-               <VBox.margin>
-                  <Insets top="50.0" />
-               </VBox.margin>
-            </HBox>
+                  <Font name="System Bold" size="18.0" />
+               </font></Label>
+            <TextArea fx:id="taLibSec" prefHeight="100.0" prefWidth="500.0" />
          </children>
-      </VBox>
-      <HBox alignment="CENTER" layoutX="-1.0" layoutY="345.0" prefHeight="100.0" prefWidth="729.0">
+      </HBox>
+
+      <!-- Boutons en bas -->
+      <HBox alignment="CENTER" layoutX="-1.0" layoutY="375.0" prefHeight="100.0" prefWidth="729.0" spacing="20.0">
          <children>
-            <Button fx:id="bEnregistrer" mnemonicParsing="false" onAction="#bEnregistrerClick" prefHeight="39.0" prefWidth="200.0" text="ENREGISTRER" textFill="#024010">
+            <Button fx:id="bEnregistrer" onAction="#bEnregistrerClick" prefHeight="39.0" prefWidth="200.0" text="ENREGISTRER" textFill="#024010">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
             </Button>
-            <Button fx:id="bEffacer" mnemonicParsing="false" onAction="#bEffacerClick" prefHeight="39.0" prefWidth="200.0" text="EFFACER" textFill="#024010">
+            <Button fx:id="bEffacer" onAction="#bEffacerClick" prefHeight="39.0" prefWidth="200.0" text="EFFACER" textFill="#024010">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
             </Button>
-            <Button fx:id="bRetour" mnemonicParsing="false" onAction="#bRetourClick" prefHeight="39.0" prefWidth="200.0" text="RETOUR" textFill="#024010">
+            <Button fx:id="bRetour" onAction="#bRetourClick" prefHeight="39.0" prefWidth="200.0" text="RETOUR" textFill="#024010">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <VBox prefHeight="48.0" prefWidth="729.0">
+
+      <!-- Courbe verte en bas des boutons -->
+      <Pane layoutX="0.0" layoutY="440.0" prefHeight="30.0" prefWidth="729.0">
          <children>
-            <MenuBar prefHeight="26.0" prefWidth="711.0">
-               <menus>
-                  <Menu fx:id="gestionEtud" mnemonicParsing="false" text="Gestion étudiant">
-                     <items>
-                        <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="liste étudiant" />
-                        <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="ajouter un étudiant" />
-                     </items>
-                  </Menu>
-                  <Menu fx:id="gestionSection" mnemonicParsing="false" text="Gestion section">
-                     <items>
-                        <MenuItem fx:id="bListeSection" mnemonicParsing="false" onAction="#bListeSectionClick" text="Liste des sections" />
-                        <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="ajouter une section" />
-                     </items>
-                  </Menu>
-                  <Menu fx:id="gestionCours" mnemonicParsing="false" text="Gestion cours">
-                     <items>
-                        <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="liste cours" />
-                        <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="ajouter un cours" />
-                     </items>
-                  </Menu>
-                  <Menu fx:id="bAutres" mnemonicParsing="false" text="Autres">
-                     <items>
-                        <MenuItem fx:id="bAccueil" mnemonicParsing="false" onAction="#bAccueilClick" text="Accueil" />
-                        <MenuItem fx:id="bQuitter" mnemonicParsing="false" onAction="#bQuitterClick" text="Quitter" />
-                     </items>
-                  </Menu>
-               </menus>
-            </MenuBar>
+            <QuadCurve controlX="7.666656494140625" controlY="-35.99993896484375" endX="409.6666259765625" endY="9.333282470703125" fill="#006716" layoutX="348.0" layoutY="30.0" startX="-399.66668701171875" startY="9.333282470703125" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
          </children>
-      </VBox>
+      </Pane>
+
    </children>
 </Pane>
