--- a/Code/src/main/resources/fsiAdministration/views/page_liste_cours.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/page_liste_cours.fxml
@@ -1,42 +1,72 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.QuadCurve?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ListeCoursController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="804.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ListeCoursController">
    <children>
       <VBox layoutX="-1.0" prefHeight="48.0" prefWidth="804.0">
          <children>
-            <MenuBar prefHeight="26.0" prefWidth="799.0">
+            <MenuBar layoutY="1.0" prefHeight="26.0" prefWidth="711.0">
                <menus>
                   <Menu fx:id="gestionEtud" mnemonicParsing="false" text="Gestion étudiant">
+                     <graphic>
+                        <ImageView fitHeight="16" fitWidth="16">
+                           <image>
+                              <Image url="@../images/graduation-cap.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                      <items>
-                        <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="liste étudiant" />
-                        <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="ajouter un étudiant" />
+                        <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="Liste étudiant" />
+                        <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="Ajouter un étudiant" />
                      </items>
                   </Menu>
                   <Menu fx:id="gestionSection" mnemonicParsing="false" text="Gestion section">
+                     <graphic>
+                        <ImageView fitHeight="16" fitWidth="16">
+                           <image>
+                              <Image url="@../images/users-alt.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                      <items>
                         <MenuItem fx:id="bListeSection" mnemonicParsing="false" onAction="#bListeSectionClick" text="Liste des sections" />
-                        <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="ajouter une section" />
+                        <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="Ajouter une section" />
                      </items>
                   </Menu>
                   <Menu fx:id="gestionCours" mnemonicParsing="false" text="Gestion cours">
+                     <graphic>
+                        <ImageView fitHeight="16" fitWidth="16">
+                           <image>
+                              <Image url="@../images/book-alt.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                      <items>
-                        <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="liste cours" />
-                        <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="ajouter un cours" />
+                        <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="Liste cours" />
+                        <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="Ajouter un cours" />
                      </items>
                   </Menu>
                   <Menu fx:id="bAutres" mnemonicParsing="false" text="Autres">
+                     <graphic>
+                        <ImageView fitHeight="16" fitWidth="16">
+                           <image>
+                              <Image url="@../images/info.png" />
+                           </image>
+                        </ImageView>
+                     </graphic>
                      <items>
                         <MenuItem fx:id="bAccueil" mnemonicParsing="false" onAction="#bAccueilClick" text="Accueil" />
                         <MenuItem fx:id="bQuitter" mnemonicParsing="false" onAction="#bQuitterClick" text="Quitter" />
@@ -46,25 +76,29 @@
             </MenuBar>
          </children>
       </VBox>
-      <HBox alignment="CENTER" layoutX="-1.0" layoutY="345.0" prefHeight="100.0" prefWidth="729.0">
+      <TableView fx:id="tvCours" layoutY="50.0" prefHeight="292.0" prefWidth="804.0">
+         <columns>
+            <TableColumn fx:id="tcLib" prefWidth="200.0" text="Libelle" />
+            <TableColumn fx:id="tcDesc" prefWidth="374.0" text="Description" />
+            <TableColumn fx:id="tcModif" prefWidth="110.0" text="Modifier" />
+            <TableColumn fx:id="tcSupp" prefWidth="110.0" text="Supprimer" />
+         </columns>
+      </TableView>
+
+      <!-- HBox harmonisé pour le bouton de retour -->
+      <HBox alignment="CENTER" layoutY="355.0" prefHeight="115.0" prefWidth="804.0" spacing="20.0">
          <children>
             <Button fx:id="bRetour" mnemonicParsing="false" onAction="#bRetourClick" prefHeight="39.0" prefWidth="200.0" text="RETOUR" textFill="#024010">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
             </Button>
          </children>
       </HBox>
-      <TableView fx:id="tvCours" layoutY="63.0" prefHeight="292.0" prefWidth="804.0">
-        <columns>
-          <TableColumn fx:id="tcLib" prefWidth="144.7999939918518" text="Libelle" />
-          <TableColumn fx:id="tcDesc" prefWidth="439.99998474121094" text="Description" />
-            <TableColumn fx:id="tcModif" prefWidth="110.0" text="Modifier" />
-            <TableColumn fx:id="tcSupp" prefWidth="110.0" text="Supprimer" />
-        </columns>
-      </TableView>
+
+      <!-- Bande verte en bas pour harmonisation -->
+      <Pane layoutX="0.0" layoutY="439.0" prefHeight="39.0" prefWidth="804.0" />
+      <QuadCurve controlX="67.66667938232422" controlY="-217.33334350585938" endX="318.33331298828125" endY="-15.000030517578125" fill="#006716" layoutX="-60.0" layoutY="493.0" startX="-152.3333282470703" startY="-15.000030517578125" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+      <QuadCurve controlX="190.6666259765625" controlY="-222.33334350585938" endX="45.00006103515625" endY="-15.0" fill="#006716" layoutX="759.0" layoutY="493.0" startX="-220.66668701171875" startY="-15.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
    </children>
 </Pane>
