--- a/Code/src/main/resources/fsiAdministration/views/page_liste_etudiant.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/page_liste_etudiant.fxml
@@ -6,60 +6,102 @@
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.shape.QuadCurve?>
 <?import javafx.scene.text.Font?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="498.0" prefWidth="857.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ListeEtudiantController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="478.0" prefWidth="873.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ListeEtudiantController">
     <children>
-        <VBox layoutX="-1.0" prefHeight="498.0" prefWidth="857.0">
-         <MenuBar prefHeight="26.0" prefWidth="737.0">
-            <menus>
-               <Menu fx:id="gestionEtud" mnemonicParsing="false" text="Gestion étudiant">
-                  <items>
-                     <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="liste étudiant" />
-                     <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="ajouter un étudiant" />
-                  </items>
-               </Menu>
-               <Menu fx:id="gestionSection" mnemonicParsing="false" text="Gestion section">
-                  <items>
-                     <MenuItem fx:id="bListeSection" mnemonicParsing="false" onAction="#bListeSectionClick" text="Liste des sections" />
-                     <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="ajouter une section" />
-                  </items>
-               </Menu>
-               <Menu fx:id="gestionCours" mnemonicParsing="false" text="Gestion cours">
-                  <items>
-                     <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="liste cours" />
-                     <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="ajouter un cours" />
-                  </items>
-               </Menu>
-               <Menu fx:id="bAutres" mnemonicParsing="false" text="Autres">
-                  <items>
-                     <MenuItem fx:id="bAccueil" mnemonicParsing="false" onAction="#bAccueilClick" text="Accueil" />
-                     <MenuItem fx:id="bQuitter" mnemonicParsing="false" onAction="#bQuitterClick" text="Quitter" />
-                  </items>
-               </Menu>
-            </menus>
-         </MenuBar>
-                <TableView fx:id="tvEtudiants" prefHeight="386.0" prefWidth="858.0">
-                    <columns>
-                        <TableColumn fx:id="tcNomEtud" prefWidth="150.40003049373627" text="Nom des étudiants" />
-                        <TableColumn fx:id="tcPrenomEtud" prefWidth="161.5999755859375" text="Prenom des étuidants" />
-               <TableColumn fx:id="tcSection" prefWidth="212.79995727539062" text="Section" />
-               <TableColumn fx:id="tcNaissance" prefWidth="143.99996948242188" text="Date de naissance" />
-               <TableColumn fx:id="tcSupprimer" prefWidth="139.99993896484375" text="supprimer" />
-               <TableColumn fx:id="tcModifier" prefWidth="107.199951171875" text="modifier" />
-                    </columns>
-            <columnResizePolicy>
-               <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
-            </columnResizePolicy>
-                </TableView>
-         <Button fx:id="bRetour" mnemonicParsing="false" onAction="#bRetourClick" prefHeight="39.0" prefWidth="166.0" text="Retour" textFill="#024010">
-            <font>
-               <Font name="System Bold" size="18.0" />
-            </font>
-         </Button>
-
+        <VBox layoutX="-1.0" prefHeight="48.0" prefWidth="873.0">
+            <children>
+                <MenuBar layoutY="1.0" prefHeight="26.0" prefWidth="866.0">
+                    <menus>
+                        <Menu fx:id="gestionEtud" mnemonicParsing="false" text="Gestion étudiant">
+                            <graphic>
+                                <ImageView fitHeight="16" fitWidth="16">
+                                    <image>
+                                        <Image url="@../images/graduation-cap.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <items>
+                                <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="Liste étudiant" />
+                                <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="Ajouter un étudiant" />
+                            </items>
+                        </Menu>
+                        <Menu fx:id="gestionSection" mnemonicParsing="false" text="Gestion section">
+                            <graphic>
+                                <ImageView fitHeight="16" fitWidth="16">
+                                    <image>
+                                        <Image url="@../images/users-alt.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <items>
+                                <MenuItem fx:id="bListeSection" mnemonicParsing="false" onAction="#bListeSectionClick" text="Liste des sections" />
+                                <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="Ajouter une section" />
+                            </items>
+                        </Menu>
+                        <Menu fx:id="gestionCours" mnemonicParsing="false" text="Gestion cours">
+                            <graphic>
+                                <ImageView fitHeight="16" fitWidth="16">
+                                    <image>
+                                        <Image url="@../images/book-alt.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <items>
+                                <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="Liste cours" />
+                                <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="Ajouter un cours" />
+                            </items>
+                        </Menu>
+                        <Menu fx:id="bAutres" mnemonicParsing="false" text="Autres">
+                            <graphic>
+                                <ImageView fitHeight="16" fitWidth="16">
+                                    <image>
+                                        <Image url="@../images/info.png" />
+                                    </image>
+                                </ImageView>
+                            </graphic>
+                            <items>
+                                <MenuItem fx:id="bAccueil" mnemonicParsing="false" onAction="#bAccueilClick" text="Accueil" />
+                                <MenuItem fx:id="bQuitter" mnemonicParsing="false" onAction="#bQuitterClick" text="Quitter" />
+                            </items>
+                        </Menu>
+                    </menus>
+                </MenuBar>
+            </children>
         </VBox>
+
+        <TableView fx:id="tvEtudiants" layoutY="50.0" prefHeight="292.0" prefWidth="873.0">
+            <columns>
+                <TableColumn fx:id="tcNomEtud" prefWidth="150.0" text="Nom des étudiants" />
+                <TableColumn fx:id="tcPrenomEtud" prefWidth="160.0" text="Prénom des étudiants" />
+                <TableColumn fx:id="tcSection" prefWidth="210.0" text="Section" />
+                <TableColumn fx:id="tcNaissance" prefWidth="144.0" text="Date de naissance" />
+                <TableColumn fx:id="tcSupprimer" prefWidth="110.0" text="Supprimer" />
+                <TableColumn fx:id="tcModifier" prefWidth="110.0" text="Modifier" />
+            </columns>
+        </TableView>
+
+        <!-- HBox pour le bouton de retour -->
+        <HBox alignment="CENTER" layoutY="355.0" prefHeight="115.0" prefWidth="873.0" spacing="20.0">
+            <children>
+                <Button fx:id="bRetour" mnemonicParsing="false" onAction="#bRetourClick" prefHeight="39.0" prefWidth="200.0" text="RETOUR" textFill="#024010">
+                    <font>
+                        <Font name="System Bold" size="18.0" />
+                    </font>
+                </Button>
+            </children>
+        </HBox>
+
+        <!-- Bande verte en bas pour harmonisation -->
+        <Pane layoutX="0.0" layoutY="439.0" prefHeight="39.0" prefWidth="804.0" />
+        <QuadCurve controlX="18.33334732055664" controlY="-216.0" endX="318.33331298828125" endY="-15.000030517578125" fill="#006716" layoutX="-60.0" layoutY="493.0" startX="-152.3333282470703" startY="-15.000030517578125" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+        <QuadCurve controlX="190.6666259765625" controlY="-222.33334350585938" endX="85.0" endY="-16.000030517578125" fill="#006716" layoutX="788.0" layoutY="494.0" startX="-220.66668701171875" startY="-15.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
     </children>
 </Pane>
