--- a/Code/src/main/resources/fsiAdministration/views/page_modif_cours.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/page_modif_cours.fxml
@@ -8,8 +8,12 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.Pane?>
+<?import javafx.scene.shape.QuadCurve?>
+<?import javafx.scene.shape.Rectangle?>
 <?import javafx.scene.text.Font?>
 
 <Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="434.0" prefWidth="714.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.ModifierCoursController">
@@ -17,24 +21,52 @@
       <MenuBar layoutY="1.0" prefHeight="26.0" prefWidth="711.0">
          <menus>
             <Menu fx:id="gestionEtud" mnemonicParsing="false" text="Gestion étudiant">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/graduation-cap.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                <items>
-                  <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="liste étudiant" />
-                  <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="ajouter un étudiant" />
+                  <MenuItem fx:id="bListeEtud" mnemonicParsing="false" onAction="#bListEtudClick" text="Liste étudiant" />
+                  <MenuItem fx:id="bAjouterEtud" mnemonicParsing="false" onAction="#bAjouterEtudClick" text="Ajouter un étudiant" />
                </items>
             </Menu>
             <Menu fx:id="gestionSection" mnemonicParsing="false" text="Gestion section">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/users-alt.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                <items>
                   <MenuItem fx:id="bListeSection" mnemonicParsing="false" onAction="#bListeSectionClick" text="Liste des sections" />
-                  <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="ajouter une section" />
+                  <MenuItem fx:id="bAjouterSection" mnemonicParsing="false" onAction="#bAjouterSectionClick" text="Ajouter une section" />
                </items>
             </Menu>
             <Menu fx:id="gestionCours" mnemonicParsing="false" text="Gestion cours">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/book-alt.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                <items>
-                  <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="liste cours" />
-                  <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="ajouter un cours" />
+                  <MenuItem fx:id="bListeCours" mnemonicParsing="false" onAction="#bListeCoursClick" text="Liste cours" />
+                  <MenuItem fx:id="bAjouterCours" mnemonicParsing="false" onAction="#bAjouterCoursClick" text="Ajouter un cours" />
                </items>
             </Menu>
             <Menu fx:id="bAutres" mnemonicParsing="false" text="Autres">
+               <graphic>
+                  <ImageView fitHeight="16" fitWidth="16">
+                     <image>
+                        <Image url="@../images/info.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
                <items>
                   <MenuItem fx:id="bAccueil" mnemonicParsing="false" onAction="#bAccueilClick" text="Accueil" />
                   <MenuItem fx:id="bQuitter" mnemonicParsing="false" onAction="#bQuitterClick" text="Quitter" />
@@ -42,14 +74,16 @@
             </Menu>
          </menus>
       </MenuBar>
+
       <Label alignment="CENTER" contentDisplay="CENTER" layoutY="45.0" prefHeight="35.0" prefWidth="710.0" text="MODIFICATION D'UN COURS" textAlignment="CENTER" textFill="#024010">
          <font>
             <Font name="System Bold" size="24.0" />
          </font>
       </Label>
-      <HBox fx:id="hbNomEtud" layoutY="108.0" prefHeight="44.0" prefWidth="710.0">
+
+      <HBox fx:id="hbNomEtud" alignment="CENTER_LEFT" layoutY="108.0" prefHeight="44.0" prefWidth="710.0" spacing="10.0">
          <children>
-            <Label prefHeight="17.0" prefWidth="165.0" text="Libelle cours" textFill="#024010">
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="165.0" text="Libelle cours" textFill="#024010">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -57,9 +91,10 @@
             <TextField fx:id="tfLibCours" prefHeight="26.0" prefWidth="375.0" />
          </children>
       </HBox>
-      <HBox fx:id="hbNomEtud1" layoutY="172.0" prefHeight="44.0" prefWidth="710.0">
+
+      <HBox fx:id="hbNomEtud1" alignment="CENTER_LEFT" layoutY="172.0" prefHeight="44.0" prefWidth="710.0" spacing="10.0">
          <children>
-            <Label prefHeight="17.0" prefWidth="165.0" text="Description cours" textFill="#024010">
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="165.0" text="Description cours" textFill="#024010">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -67,9 +102,10 @@
             <TextField fx:id="tfDescCours" prefHeight="26.0" prefWidth="375.0" />
          </children>
       </HBox>
-      <HBox fx:id="hbSectionEtudiant" layoutY="227.0" prefHeight="66.0" prefWidth="710.0">
+
+      <HBox fx:id="hbSectionEtudiant" alignment="CENTER_LEFT" layoutY="227.0" prefHeight="66.0" prefWidth="710.0" spacing="10.0">
          <children>
-            <Label prefHeight="17.0" prefWidth="165.0" text="Section cours" textFill="#024010">
+            <Label alignment="CENTER" prefHeight="17.0" prefWidth="165.0" text="Section cours" textFill="#024010">
                <font>
                   <Font name="System Bold" size="14.0" />
                </font>
@@ -77,25 +113,29 @@
             <ListView fx:id="lvSectionCours" prefHeight="37.0" prefWidth="378.0" />
          </children>
       </HBox>
-      <HBox alignment="CENTER" layoutX="-9.0" layoutY="300.0" prefHeight="100.0" prefWidth="729.0">
+
+      <HBox alignment="CENTER" layoutX="-9.0" layoutY="300.0" prefHeight="100.0" prefWidth="729.0" spacing="20.0">
          <children>
             <Button fx:id="bEnregistrer" mnemonicParsing="false" onAction="#bEnregistrerClick" prefHeight="39.0" prefWidth="200.0" text="ENREGISTRER" textFill="#024010">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
             </Button>
             <Button fx:id="bRetour" mnemonicParsing="false" onAction="#bRetourClick" prefHeight="39.0" prefWidth="200.0" text="RETOUR" textFill="#024010">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
-               <HBox.margin>
-                  <Insets right="20.0" />
-               </HBox.margin>
             </Button>
          </children>
       </HBox>
+
+      <!-- Courbe verte en bas des boutons -->
+      <Pane layoutX="0.0" layoutY="400.0" prefHeight="30.0" prefWidth="714.0">
+         <children>
+            <QuadCurve controlX="-3.666656494140625" controlY="-66.66671752929688" endX="366.0" endY="3.999969482421875" fill="#024010" layoutX="348.0" layoutY="30.0" startX="-382.3333435058594" startY="6.666656494140625" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" />
+         </children>
+      </Pane>
+
+      <Rectangle arcHeight="5.0" arcWidth="5.0" fill="#01a321" height="5.0" layoutX="101.0" layoutY="77.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="0.0" width="508.0" />
    </children>
 </Pane>
