--- a/Code/src/main/resources/fsiAdministration/views/popup_section.fxml
+++ b/Code/src/main/resources/fsiAdministration/views/popup_section.fxml
@@ -1,17 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="173.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.PopupSectionController">
-   <children>
-      <Text fill="#e10707" layoutX="46.0" layoutY="49.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Il reste des etudiants et/ou des cours dans cette section" textAlignment="CENTER" wrappingWidth="241.48491668701172">
+<StackPane prefHeight="173.0" prefWidth="335.0" xmlns="http://javafx.com/javafx/22" xmlns:fx="http://javafx.com/fxml/1" fx:controller="fsiAdministration.controllers.PopupSectionController">
+
+   <!-- Contenu principal -->
+   <VBox alignment="CENTER" spacing="30.0" prefWidth="295.0">
+      <padding>
+         <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+      </padding>
+
+      <!-- Message d'erreur -->
+      <Text fill="#0c7422" text="Il reste des étudiants et/ou des cours dans cette section" textAlignment="CENTER" wrappingWidth="295.0">
          <font>
-            <Font size="22.0" />
+            <Font name="Franklin Gothic Medium" size="22.0" />
          </font>
       </Text>
-      <Button fx:id="bPopupSec" layoutX="151.0" layoutY="134.0" mnemonicParsing="false" onAction="#bPopupSecClick" text="OK" />
-   </children>
-</Pane>
+
+      <!-- Bouton OK -->
+      <Button fx:id="bPopupSec" onAction="#bPopupSecClick" prefHeight="35.0" prefWidth="120.0" style="-fx-background-color: #0c7422;" text="OK" textFill="WHITE" />
+   </VBox>
+</StackPane>
